srchd to msrchd + easy erdos problems

--- a/profiles/formal-math/Dockerfile
+++ b/profiles/formal-math/Dockerfile
@@ -19,7 +19,7 @@ RUN groupadd -g 1001 agent && \
 RUN export HOME=/home/agent; curl https://elan.lean-lang.org/elan-init.sh -sSf | sh -s -- -y && \
     echo 'export PATH="/home/agent/.elan/bin:$PATH"' >> /home/agent/.bashrc && \
     export PATH="/home/agent/.elan/bin:$PATH" && \
-    cd /home/agent/ && lake +leanprover-community/mathlib4:lean-toolchain new Math && \
+    cd /home/agent/ && lake +leanprover-community/mathlib4:lean-toolchain new Math math && \
     cd Math && lake exe cache get && lake build && \
     chown -R agent:agent /home/agent
 
