Move Lean installation to /opt/lean to avoid volume overwrite
The /home/agent directory is mounted as a volume for persistence,
which was overwriting the pre-built mathlib cache. Moving elan,
Math project, and REPL to /opt/lean ensures they persist in the
Docker image layer.

- Set ELAN_HOME=/opt/lean/.elan
- Install Math project to /opt/lean/Math
- Install REPL to /opt/lean/repl
- Update .bashrc to reference new locations

--- a/profiles/formal-math/Dockerfile
+++ b/profiles/formal-math/Dockerfile
@@ -16,35 +16,37 @@ RUN groupadd -g 1001 agent && \
     useradd -u 1001 -g 1001 -m -s /bin/bash agent && \
     echo 'agent ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
-# Install elan (Lean version manager)
-RUN export HOME=/home/agent && \
-    curl https://elan.lean-lang.org/elan-init.sh -sSf | sh -s -- -y && \
-    echo 'export PATH="/home/agent/.elan/bin:$PATH"' >> /home/agent/.bashrc && \
-    chown -R agent:agent /home/agent/.elan /home/agent/.bashrc
+# Create /opt/lean directory for Lean installation (separate from user home volume)
+RUN mkdir -p /opt/lean && chown agent:agent /opt/lean
 
-# Create Math project with mathlib
-RUN export HOME=/home/agent && \
-    export PATH="/home/agent/.elan/bin:$PATH" && \
-    cd /home/agent/ && \
+# Install elan (Lean version manager) to /opt/lean
+RUN export ELAN_HOME=/opt/lean/.elan && \
+    curl https://elan.lean-lang.org/elan-init.sh -sSf | sh -s -- -y --no-modify-path && \
+    chown -R agent:agent /opt/lean/.elan
+
+# Create Math project with mathlib in /opt/lean
+RUN export ELAN_HOME=/opt/lean/.elan && \
+    export PATH="/opt/lean/.elan/bin:$PATH" && \
+    cd /opt/lean && \
     lake +leanprover-community/mathlib4:lean-toolchain new Math math && \
     cd Math && lake exe cache get && \
-    chown -R agent:agent /home/agent/Math
+    chown -R agent:agent /opt/lean/Math
 
 # Build Math project
-RUN export HOME=/home/agent && \
-    export PATH="/home/agent/.elan/bin:$PATH" && \
-    cd /home/agent/Math && lake build && \
-    chown -R agent:agent /home/agent/Math
+RUN export ELAN_HOME=/opt/lean/.elan && \
+    export PATH="/opt/lean/.elan/bin:$PATH" && \
+    cd /opt/lean/Math && lake build && \
+    chown -R agent:agent /opt/lean/Math
 
 # Install Lean REPL
-RUN export HOME=/home/agent && \
-    export PATH="/home/agent/.elan/bin:$PATH" && \
-    cd /home/agent && \
+RUN export ELAN_HOME=/opt/lean/.elan && \
+    export PATH="/opt/lean/.elan/bin:$PATH" && \
+    cd /opt/lean && \
     git clone https://github.com/leanprover-community/repl.git && \
     cd repl && \
-    cp /home/agent/Math/lean-toolchain . && \
+    cp /opt/lean/Math/lean-toolchain . && \
     lake build && \
-    chown -R agent:agent /home/agent/repl
+    chown -R agent:agent /opt/lean/repl
 
 USER agent
 WORKDIR /home/agent
@@ -54,15 +56,18 @@ RUN python3 -m venv /home/agent/.venv && \
     /home/agent/.venv/bin/pip install \
     numpy pandas matplotlib seaborn plotly
 
-RUN echo 'export PATH="/home/agent/.venv/bin:$PATH"' >> /home/agent/.bashrc && \
+# Set up environment to use Lean from /opt/lean
+RUN echo 'export ELAN_HOME=/opt/lean/.elan' >> /home/agent/.bashrc && \
+    echo 'export PATH="/opt/lean/.elan/bin:/home/agent/.venv/bin:$PATH"' >> /home/agent/.bashrc && \
     echo 'export PYTHONPATH="/home/agent:$PYTHONPATH"' >> /home/agent/.bashrc && \
     echo 'alias ll="ls -la"' >> /home/agent/.bashrc && \
     echo 'alias la="ls -la"' >> /home/agent/.bashrc && \
-    echo 'source $HOME/.elan/env' >> /home/agent/.bashrc && \
+    echo '# Lean Math project is at /opt/lean/Math' >> /home/agent/.bashrc && \
+    echo '# Lean REPL is at /opt/lean/repl' >> /home/agent/.bashrc && \
     echo 'cd /home/agent' >> /home/agent/.bashrc
 
 CMD ["/bin/bash"]
 
 LABEL maintainer="agent-computer" \
-    description="Secure sandbox environment for AI agents" \
-    version="1.1"
+    description="Secure sandbox environment for AI agents with Lean 4 and Mathlib" \
+    version="1.2"
